--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -7,7 +7,6 @@
 }
 
 
-
 html {
     min-height: 100%;
 }
@@ -82,4 +81,50 @@ button.btn-primary:hover {
     text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
     text-decoration: underline;
 }
+
+/* Общие стили для всех радиокнопок и меток */
+input[type='radio'], .custom-radio label {
+    cursor: pointer;
+}
+
+/* Стили для кастомных радиокнопок */
+.custom-radio input[type='radio'] {
+    position: relative;
+    height: 22px;
+    width: 22px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+}
+
+.custom-radio input[type='radio']::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    border: 2px solid maroon;
+}
+
+.custom-radio input[type='radio']:checked::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: maroon;
+    transform: translate(-50%, -50%);
+    visibility: visible;
+}
+
+
+
+
 
